<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.dumptruckloads.truckcalc.ui.MainActivity">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/main_top_header"
            android:layout_width="0dp"
            android:layout_height="@dimen/ma_header_img_h"
            android:background="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="0dp"
            />

        <ImageView
            android:id="@+id/header_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:layout_marginLeft="@dimen/margin_side"
            android:layout_marginRight="@dimen/margin_side"
            android:src="@drawable/logo_top_menu"
            app:layout_constraintTop_toTopOf="@+id/main_top_header"
            app:layout_constraintBottom_toBottomOf="@+id/main_top_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            />

        <ImageView
            android:id="@+id/header_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:layout_marginTop="@dimen/margin_header_top"
            android:layout_marginRight="@dimen/margin_header_top"
            android:src="@drawable/mail_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            />

        <TextView
            android:id="@+id/header_top_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ma_list_item_margin_top"
            android:maxLines="1"
            android:text="@string/header_top_txt"
            android:fontFamily="@font/depressionist_3_revisited"
            android:textColor="#FFB005"
            android:textSize="22sp"
            app:layout_constraintLeft_toRightOf="@id/header_img"
            app:layout_constraintTop_toTopOf="@+id/header_img"
            />

        <TextView
            android:id="@+id/header_bottom_txt"
            style="@style/Text.MainHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ma_list_item_margin_top"
            android:text="@string/header_bottom_txt"
            app:layout_constraintLeft_toRightOf="@id/header_img"
            app:layout_constraintTop_toBottomOf="@+id/header_top_txt"
            />

        <TextView
            android:id="@+id/header_url_txt"
            style="@style/Text.MainHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/header_url_txt"
            android:textColor="#048CD7"
            app:layout_constraintLeft_toRightOf="@id/header_bottom_txt"
            app:layout_constraintTop_toBottomOf="@+id/header_top_txt"
            />

        <TextView
            android:id="@+id/main_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_header_top"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/main_header"
            android:textColor="#3D3D3D"
            android:textSize="22sp"
            android:fontFamily="@font/oswald_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_top_header"
             />

        <TextView
            style="@style/Text.Label.MainActivity"
            android:id="@+id/main_group1_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_header_top"
            android:layout_marginRight="@dimen/margin_side"
            android:layout_marginLeft="@dimen/margin_side"
            android:text="@string/main_group1_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_header"
            />

        <Button
            android:id="@+id/button_rate_per_ton"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ma_list_item_margin_top"
            android:layout_marginRight="@dimen/margin_side"
            android:layout_marginLeft="@dimen/margin_side"
            android:text="@string/button_rate_per_ton"
            android:background="@drawable/main_button_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_group1_txt"/>

        <View
            android:id="@+id/first_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#E5E5E5"
            android:layout_marginTop="@dimen/ma_list_item_margin_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_rate_per_ton"
            />

        <TextView
            android:id="@+id/main_group2_txt"
            style="@style/Text.Label.MainActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_header_top"
            android:layout_marginRight="@dimen/margin_side"
            android:layout_marginLeft="@dimen/margin_side"
            android:text="@string/main_group2_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_divider"
            />

        <Button
            android:id="@+id/button_trucks_needed"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ma_list_item_margin_top"
            android:layout_marginRight="@dimen/margin_side"
            android:layout_marginLeft="@dimen/margin_side"
            android:text="@string/button_trucks_needed"
            android:background="@drawable/main_button_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_group2_txt"/>

        <View
            android:id="@+id/second_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#E5E5E5"
            android:layout_marginTop="@dimen/ma_list_item_margin_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_trucks_needed"
            />

        <TextView
            android:id="@+id/main_group3_txt"
            style="@style/Text.Label.MainActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_header_top"
            android:layout_marginRight="@dimen/margin_side"
            android:layout_marginLeft="@dimen/margin_side"
            android:text="@string/main_group3_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_divider"
            />

        <Button
            android:id="@+id/button_haul_difference"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ma_list_item_margin_top"
            android:layout_marginRight="@dimen/margin_side"
            android:layout_marginLeft="@dimen/margin_side"
            android:text="@string/button_haul_difference"
            android:background="@drawable/main_button_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_group3_txt"/>

    </android.support.constraint.ConstraintLayout>
</layout>